// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/Table/Row WithAttributes play-test 1`] = `
<div data-test-block="true">
  <div class>
    <table class="_table_1kbf9_15  _table_standard_1kbf9_38">
      <caption class="_tableCaption_1kbf9_22 _hidden_1kbf9_45 _tableCaption_standard_1kbf9_28">
        testtabell
      </caption>
      <tbody>
        <tr id="htmlId"
            class="dummyClassname"
            lang="nb"
            data-testid="123ID"
        >
          <th id="Id123"
              class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20"
              scope="row"
          >
            Cake
          </th>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20">
            3,000
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Tester/Table/Row WithExpandButtonPositionRight smoke-test 1`] = `
<div data-test-block="true">
  <div class>
    <table class="_table_1kbf9_15  _table_standard_1kbf9_38">
      <caption class="_tableCaption_1kbf9_22 _hidden_1kbf9_45 _tableCaption_standard_1kbf9_28">
        testtabell
      </caption>
      <tbody>
        <tr class>
          <th id="Id123"
              class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20"
              scope="row"
          >
            Cake
          </th>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20">
            3,000
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  _buttonCell_1rqke_5">
            <button class="_button_19ayz_1 _button_medium_19ayz_42"
                    data-brightness="default"
                    type="button"
                    aria-expanded="false"
            >
              <svg class="_systemIcon_dry7n_2 _systemIcon_medium_dry7n_10 _icon_19ayz_26"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r3:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r3:">
                  Mer informasjon
                </title>
                <path d="M18.1 7.98001L12 14.08L5.9 7.98001L4 9.88L12 17.88L20 9.88L18.1 7.98001Z">
                </path>
              </svg>
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Tester/Table/Row WithExpandableContent smoke-test 1`] = `
<div data-test-block="true">
  <div class>
    <table class="_table_1kbf9_15  _table_standard_1kbf9_38">
      <caption class="_tableCaption_1kbf9_22 _hidden_1kbf9_45 _tableCaption_standard_1kbf9_28">
        testtabell
      </caption>
      <tbody>
        <tr class>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  _buttonCell_1rqke_5">
            <button class="_button_19ayz_1 _button_medium_19ayz_42"
                    data-brightness="default"
                    type="button"
                    aria-expanded="false"
            >
              <svg class="_systemIcon_dry7n_2 _systemIcon_medium_dry7n_10 _icon_19ayz_26"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r2:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r2:">
                  Mer informasjon
                </title>
                <path d="M18.1 7.98001L12 14.08L5.9 7.98001L4 9.88L12 17.88L20 9.88L18.1 7.98001Z">
                </path>
              </svg>
            </button>
          </td>
          <th id="Id123"
              class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20"
              scope="row"
          >
            Cake
          </th>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20">
            3,000
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Tester/Table/Row WithRef play-test 1`] = `
<div data-test-block="true">
  <div class>
    <table class="_table_1kbf9_15  _table_standard_1kbf9_38">
      <caption class="_tableCaption_1kbf9_22 _hidden_1kbf9_45 _tableCaption_standard_1kbf9_28">
        testtabell
      </caption>
      <tbody>
        <tr class
            id="dummyIdForwardedFromRef"
        >
          <th id="Id123"
              class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20"
              scope="row"
          >
            Cake
          </th>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20">
            3,000
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
